fix(message-list): aligned dot badge in center of message list label

--- a/packages/components-css/src/message-list/_mixin.scss
+++ b/packages/components-css/src/message-list/_mixin.scss
@@ -59,6 +59,7 @@
   --nl-paragraph-font-size: var(--rhc-message-list-item-label-font-size);
   --nl-paragraph-line-height: var(--rhc-message-list-item-label-line-height);
 
+  align-items: center;
   color: var(--rhc-message-list-item-heading-color);
   column-gap: var(--rhc-space-100);
   display: flex;
